tests/ui/traits/const-traits/item-bound-entailment-fails.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/item-bound-entailment-fails.rs:2:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `N<T>: ~const Bar` is not satisfied
  --> $DIR/item-bound-entailment-fails.rs:18:21
   |
LL |     type Assoc<T> = N<T>
   |                     ^^^^
   |
note: required by a bound in `Foo::Assoc`
  --> $DIR/item-bound-entailment-fails.rs:6:20
   |
LL |     type Assoc<T>: ~const Bar
   |                    ^^^^^^ required by this bound in `Foo::Assoc`

error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/item-bound-entailment-fails.rs:25:21
   |
LL |     type Assoc<T> = C<T>
   |                     ^^^^
   |
note: required by a bound in `Foo::Assoc`
  --> $DIR/item-bound-entailment-fails.rs:6:20
   |
LL |     type Assoc<T>: ~const Bar
   |                    ^^^^^^ required by this bound in `Foo::Assoc`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
